feat(stock): expose barcode lookup by userfield
